--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -2,6 +2,17 @@
 {
     color:White;
     font-weight:bold;
-    font-size:larger;
+    font-size:smaller;
+    margin-top:20px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
+#rightgallerycarousel li a 
+{
+    width:auto !important;
+}
