--- a/scripts/Elastislide/css/elastislide.css
+++ b/scripts/Elastislide/css/elastislide.css
@@ -32,12 +32,13 @@
 }
 
 .elastislide-vertical {
-	padding: 40px 10px;
+	padding: 60px 10px;
 }
 
 .elastislide-carousel {
 	overflow: hidden;
 	position: relative;
+	padding-bottom:60px;
 }
 
 .elastislide-carousel ul {
