--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -4,6 +4,7 @@
     font-weight:bold;
     font-size:smaller;
     margin-top:20px;
+    margin-bottom:4px;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -15,4 +16,9 @@
 #rightgallerycarousel li a 
 {
     width:auto !important;
+}
+
+.livergallery
+{
+    margin-bottom:8px !important;
 }
