--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,6 +1,6 @@
 ﻿.imgtitle
 {
-    color:White;
+    color:#C0C0C0;
     font-weight:bold;
     font-size:smaller;
     margin-top:20px;
@@ -11,6 +11,10 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    text-decoration:none;
+    display:block;
+    text-align:right;
+    
 }
 
 #rightgallerycarousel li a 
@@ -21,4 +25,17 @@
 .livergallery
 {
     margin-bottom:8px !important;
+}
+
+gallery , a
+{
+    text-decoration:none;
+}
+
+
+.galleryimage
+{
+    margin:20px;
+    text-decoration:none;
+    height:160px;
 }
