--- a/styles/global.css
+++ b/styles/global.css
@@ -2,22 +2,24 @@
 {
     font-family:Arial, Helvetica, sans-serif;
     min-height:100%;
-    color:White;
+    color:Blue;
     direction:rtl;
      height: 100%;
+     margin:0px;
 }
 
 html
 {
-    background: url(../images/bg.jpg) no-repeat center center fixed;
-    background-color:Black;
+    
+    background-color:White;
     background-size:100%;
-     height: 100%;
+    
 }
 
 h1
 {
     font-size:xx-large;
+    color:rgba(50, 20, 50, .6);
 }
 
 .social-media-buttons { margin:auto; height:30px;}
@@ -35,7 +37,7 @@ h1
 
 #transparent
 {   
-    background: rgba(20, 20, 20, .7);
+    background: rgba(128, 128, 128, .1);
     z-index:900;
     margin:0 auto;
     height:100%;
@@ -43,16 +45,18 @@ h1
     border-bottom-width:0px;
     border-style:solid;
     border-color:#E5E4E2;
-    border-width:5px;
+    border-width:0px;
     overflow:hidden;
+    margin-top:10px;
+    padding:10px;
 }
 
 .centerdiv
 {
     margin:20px 20px 0px 50px;
-    width:95%;
+ 
     
-    color:White;
+    color:#666666;
     z-index:1000;
     
     
@@ -60,10 +64,26 @@ h1
 
 .im
 {
-    margin:30px;
+    margin-left:20px;
+    width:270px;
+    display:inline;
 }
 
 #transparent
 {
     
+}
+
+img 
+{
+    border-style:solid;
+    border-width:4px;
+    border-color:White;
+    border-radius:5px;
+    
+}
+
+.desctext
+{
+    color:rgba(50,20,50,.7);
 }
