--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,18 +1,18 @@
 ﻿
 #menu 
 {
-      margin-top:100px;
+    margin-top:100px;
     margin:0 auto;
     vertical-align:middle;
-    width: 750px;
-    height: 35px;
+    width:100%;
+    height: 45px;
     font-size: 16px;
     font-family: Tahoma, Geneva, sans-serif;
     font-weight: bold;
     text-align: center;
     text-shadow: 1px 1px 2px #333333;
     background-color: rgba(50, 20, 50, .5);
-    border-radius: 8px;
+    border-radius: 0px;
 }
 
 #menu ul {
