UX expert changes
I did some expert changes.

--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -2,7 +2,7 @@
 {
     color:#C0C0C0;
     font-weight:bold;
-    font-size:smaller;
+    font-size:large;
     margin-top:20px;
     margin-bottom:4px;
     -webkit-touch-callout: none;
@@ -13,7 +13,7 @@
     user-select: none;
     text-decoration:none;
     display:block;
-    text-align:right;
+    text-align:left;
     
 }
 
