--- a/styles/global.css
+++ b/styles/global.css
@@ -1,11 +1,13 @@
 ﻿body 
 {
     font-family:Arial, Helvetica, sans-serif;
-    min-height:100%;
+    
     color:Blue;
     direction:rtl;
-     height: 100%;
+    min-height:100%;
      margin:0px;
+   background-image: url("../images/watermark2.jpg");
+
 }
 
 html
@@ -13,7 +15,7 @@ html
     
     background-color:White;
     background-size:100%;
-    
+    height:100%;
 }
 
 h1
@@ -44,6 +46,7 @@ h1
 
 #transparent
 {   
+ /*background-color: rgba(50, 20, 50, .33);*/
     background: rgba(128, 128, 128, .1);
     z-index:900;
     margin:0 auto;
@@ -69,6 +72,13 @@ h1
     
 }
 
+.sitebutton
+{
+text-decoration:none;pointer:hand;color:black;background-color:rgba(50,20,50,.2);padding:5px 15px 5px 15px;border-radius:5px;margin-left:-50px;
+font-size:larger;font-weight:80%;
+
+}
+
 .im
 {
     margin-left:20px;
@@ -76,10 +86,6 @@ h1
     display:inline;
 }
 
-#transparent
-{
-    
-}
 
 img 
 {
