--- a/styles/menu.css
+++ b/styles/menu.css
@@ -8,11 +8,12 @@
     height: 45px;
     font-size: 16px;
     font-family: Tahoma, Geneva, sans-serif;
-    font-weight: bold;
+    
     text-align: center;
-    text-shadow: 1px 1px 2px #333333;
-    background-color: rgba(50, 20, 50, .5);
+    /*text-shadow: 1px 1px 2px #333333;*/
+    background-color: rgba(50, 20, 50, .33);
     border-radius: 0px;
+    box-shadow: 0px 6px 15px #CCC;
 }
 
 #menu ul {
