--- a/styles/gallery.css
+++ b/styles/gallery.css
@@ -1,6 +1,6 @@
 ﻿.imgtitle
 {
-    color:#C0C0C0;
+    color:rgba(50, 20, 50, 0.33);
     font-weight:bold;
     font-size:large;
     margin-top:20px;
@@ -38,4 +38,6 @@ gallery , a
     margin:20px;
     text-decoration:none;
     height:130px;
+    box-shadow: 20px 20px 80px gray;
+
 }
