--- a/styles/global.css
+++ b/styles/global.css
@@ -74,16 +74,23 @@ h1
 
 .sitebutton
 {
-text-decoration:none;pointer:hand;color:black;background-color:rgba(50,20,50,.2);padding:5px 15px 5px 15px;border-radius:5px;margin-left:-50px;
-font-size:larger;font-weight:80%;
+text-decoration:none;
+pointer:hand;
+color:black;
+background-color:rgba(50,20,50,.1);
+padding:5px 15px 5px 15px;
+border-radius:5px;
+margin-left:-50px;
+font-size:larger;
+font-weight:80%;
 
 }
 
 .im
 {
     margin-left:20px;
-    width:270px;
-    display:inline;
+    width:300px;
+box-shadow: 20px 20px 80px;
 }
 
 
@@ -99,4 +106,16 @@ img
 .desctext
 {
     color:rgba(50,20,50,.7);
+    border-radius: 5px;
+padding: 10px;
+
+width:180px;
+color: white;
+ text-align:middle;  
+text-shadow: 0px 0px 45px rgba(50,20,50,1);
+height:400px;
+font-style: italic;
+font-weight: 500;
+font-size: x-large;
+}
 }
