--- a/styles/menu.css
+++ b/styles/menu.css
@@ -14,6 +14,7 @@
     background-color: rgba(50, 20, 50, .33);
     border-radius: 0px;
     box-shadow: 0px 6px 15px #CCC;
+    position:fixed;
 }
 
 #menu ul {
