--- a/styles/global.css
+++ b/styles/global.css
@@ -3,7 +3,6 @@
     font-family:Arial, Helvetica, sans-serif;
     
     color:Blue;
-    direction:rtl;
     min-height:100%;
      margin:0px;
    background-image: url("../images/watermark2.jpg");
@@ -46,6 +45,8 @@ margin:auto;
     width:850px;
     margin:0 auto;
     vertical-align:middle;  
+        direction:rtl;
+
 }
 
 #transparent
@@ -120,6 +121,6 @@ text-shadow: 0px 0px 45px rgba(50,20,50,1);
 height:400px;
 font-style: italic;
 font-weight: 500;
-font-size: x-large;
+font-size: larger;
 }
 }
