--- a/styles/menu.css
+++ b/styles/menu.css
@@ -43,6 +43,6 @@ a[id=order]
 a[id=order]:hover,
 #menu a:hover {
     color: #000000 !important;
-    background-color: White;
+    background-color: rgba(255,255,255,0.3);
      border-radius: 5px;
 }
