--- a/styles/global.css
+++ b/styles/global.css
@@ -24,9 +24,16 @@ h1
 }
 
 .social-media-buttons { 
-margin:auto;
+margin:0 auto;
+width:600;
  height:30px;
-    padding-top:50px;
+    padding-top:55px;
+    text-align:center;
+   
+}
+.social-media-buttons span 
+{
+    text-align:left;
 }
 .social-media-list { width: 320px;}
 .social-media-list li { display:block; float: left; width:33.3%; text-align:center; margin: 0 auto;}
