--- a/styles/global.css
+++ b/styles/global.css
@@ -64,14 +64,15 @@ width:600;
     margin:0 auto;
     height:100%;
     border-radius: 15px;
-    border-bottom-width:0px;
+
     border-style:solid;
-    border-color:#E5E4E2;
+    border-color:rgba(255, 255, 255, .9);;
     border-width:0px;
     overflow:hidden;
     margin-top:10px;
     padding:10px;
     width:100%;
+    
 }
 
 .centerdiv
