--- a/styles/global.css
+++ b/styles/global.css
@@ -132,12 +132,12 @@ img
     color:rgba(50,20,50,.7);
     border-radius: 5px;
 padding: 10px;
+padding-top: 160px;
 
 width:180px;
 color: white;
- text-align:middle;  
+ text-align:center;  
 text-shadow: 0px 0px 45px rgba(50,20,50,1);
-height:400px;
 font-style: italic;
 font-weight: 500;
 font-size: larger;
