--- a/styles/global.css
+++ b/styles/global.css
@@ -1,19 +1,14 @@
 ﻿body 
 {
     font-family:Arial, Helvetica, sans-serif;
-    
     color:Blue;
     min-height:100%;
-     margin:0px;
-   background-image: url("../images/watermark2.jpg");
-
+    margin:0px;
+    background-image: url("../images/watermark2.jpg");
 }
-section p{
 
-}
 html
 {
-    
     background-color:White;
     background-size:100%;
     height:100%;
@@ -24,22 +19,22 @@ h1
     font-size:xx-large;
     color:rgba(50, 20, 50, .6);
 }
-#logo{
 
+#logo
+{
     padding-top:55px;
-margin: 0 auto;
-width: 890px;	
-    }
+    margin: 0 auto;
+    width: 890px;	
+}
     
-.social-media-buttons { 
+.social-media-buttons 
+{ 
 	margin:0 auto;
 	width:600;
  	height:30px;
-
     text-align:center;
-    
-   
 }
+
 .social-media-buttons span 
 {
     text-align:left;
@@ -50,10 +45,12 @@ width: 890px;
  
  footer
  {
-     text-align:center;
-     color:Gray;
-     font-size:x-small;
-     padding:10px;  
+    text-align:center;
+    color:Gray;
+    font-size:x-small;
+    padding:10px;  
+    width: 100%;
+    text-align: center;
  }
 
 #container
@@ -62,61 +59,52 @@ width: 890px;
     width:850px;
     margin:0 auto;
     vertical-align:middle;  
-        direction:rtl;
-
+    direction:rtl;
 }
 
 #transparent
 {   
- /*background-color: rgba(50, 20, 50, .33);*/
+    /*background-color: rgba(50, 20, 50, .33);*/
     background: rgba(128, 128, 128, .1);
     z-index:900;
     margin:0 auto;
     height:100%;
     border-radius: 15px;
-
     border-style:solid;
-    border-color:rgba(255, 255, 255, .9);;
+    border-color:rgba(255, 255, 255, .9);
     border-width:0px;
     overflow:hidden;
     margin-top:10px;
     padding:10px;
     width:100%;
-    
 }
 
 .centerdiv
 {
     margin:20px 20px 0px 50px;
- 
-    
     color:#666666;
     z-index:1000;
-    
-    
 }
 
 .sitebutton
 {
-text-decoration:none;
-pointer:hand;
-color:black;
-background-color:rgba(50,20,50,.1);
-padding:5px 15px 5px 15px;
-border-radius:5px;
-margin-left:-50px;
-font-size:larger;
-font-weight:80%;
-
+    text-decoration:none;
+    cursor:pointer;
+    color:black;
+    background-color:rgba(50,20,50,.1);
+    padding:5px 15px 5px 15px;
+    border-radius:5px;
+    margin-left:-50px;
+    font-size:larger;
+    font-weight:bolder;
 }
 
 .im
 {
     margin-left:20px;
     width:300px;
-box-shadow: 20px 20px 80px;
+    box-shadow: 20px 20px 80px;
 }
-
 
 img 
 {
@@ -124,22 +112,20 @@ img
     border-width:4px;
     border-color:White;
     border-radius:5px;
-    
 }
 
 .desctext
 {
     color:rgba(50,20,50,.7);
     border-radius: 5px;
-padding: 10px;
-padding-top: 160px;
+    padding: 10px;
+    padding-top: 160px;
+    width:180px;
+    color: white;
+    text-align:center;  
+    text-shadow: 0px 0px 45px rgba(50,20,50,1);
+    font-style: italic;
+    font-weight: 500;
+    font-size: larger;
+}
 
-width:180px;
-color: white;
- text-align:center;  
-text-shadow: 0px 0px 45px rgba(50,20,50,1);
-font-style: italic;
-font-weight: 500;
-font-size: larger;
-}
-}
