--- a/styles/global.css
+++ b/styles/global.css
@@ -25,12 +25,12 @@ h1
     padding-top:55px;
     margin: 0 auto;
     width: 890px;	
+    text-align:center;
 }
     
 .social-media-buttons 
 { 
-	margin:0 auto;
-	width:600;
+	margin:10px;
  	height:30px;
     text-align:center;
 }
@@ -45,17 +45,14 @@ h1
  
  footer
  {
-    text-align:center;
     color:Gray;
     font-size:x-small;
     padding:10px;  
-    width: 100%;
     text-align: center;
  }
 
 #container
 {
-    height:80%;
     width:850px;
     margin:0 auto;
     vertical-align:middle;  
@@ -69,13 +66,13 @@ h1
     z-index:900;
     margin:0 auto;
     height:100%;
+    min-height:550px;
     border-radius: 15px;
     border-style:solid;
     border-color:rgba(255, 255, 255, .9);
     border-width:0px;
     overflow:hidden;
     margin-top:10px;
-    padding:10px;
     width:100%;
 }
 
