--- a/styles/global.css
+++ b/styles/global.css
@@ -94,6 +94,11 @@ h1
     margin-left:-50px;
     font-size:larger;
     font-weight:bolder;
+    background-image:url('../images/left-arrow.png');
+    background-repeat:no-repeat;
+    background-position:4% 50%;
+    background-size:18%;
+    padding-left:15px;  
 }
 
 .im
