--- a/styles/global.css
+++ b/styles/global.css
@@ -1,7 +1,7 @@
 ﻿body 
 {
     font-family:Arial, Helvetica, sans-serif;
-    color:Blue;
+    color:black;
     min-height:100%;
     margin:0px;
     background-image: url("../images/watermark2.jpg");
