--- a/styles/global.css
+++ b/styles/global.css
@@ -69,6 +69,18 @@ h1
     direction:rtl;
 }
 
+#iframe{
+border:0;
+ overflow:hidden;
+ overflow-x:hidden;
+ overflow-y:hidden;
+ width:100%;
+ height:0;
+ top:0px;
+ left:0px;
+ right:0px;
+ bottom:0px
+}
 #transparent
 {   
     /*background-color: rgba(50, 20, 50, .33);*/
@@ -76,7 +88,7 @@ h1
     z-index:900;
     margin:0 auto;
     height:100%;
-    min-height:550px;
+    min-height:250px;
     border-radius: 15px;
     border-style:solid;
     border-color:rgba(255, 255, 255, .9);
