--- a/styles/global.css
+++ b/styles/global.css
@@ -123,7 +123,7 @@ border:0;
     text-decoration:none;
     cursor:pointer;
     color:black;
-    background-color:rgba(50,20,50,.1);
+   /* background-color:rgba(50,20,50,.1);*/
     padding:5px 15px 5px 15px;
     border-radius:5px;
     margin-left:-50px;
