--- a/styles/global.css
+++ b/styles/global.css
@@ -146,7 +146,7 @@ border:0;
 img 
 {
     border-style:solid;
-    border-width:4px;
+    border-width:0;
     border-color:White;
     border-radius:5px;
 }
