--- a/styles/global.css
+++ b/styles/global.css
@@ -51,7 +51,12 @@ h1
     text-align:center;
     width:100%;
     position:absolute;
-}    
+} 
+/*  
+.fb_edge_widget_with_comment span.fb_edge_comment_widget iframe.fb_ltr {
+    position:absolute;
+    bottom: 70px;
+} */
 .social-media-buttons 
 { 
 	margin:10px;
