added purchasing of painting and the paintings

--- a/styles/menu.css
+++ b/styles/menu.css
@@ -39,7 +39,8 @@ padding: 20px;
 a[id=order] 
 {
     font-size:larger;
-    color:Yellow !important;
+    font-weight:bold;
+    /*color:#FFCC00 !important;*/
 }
 
 a[id=order]:hover,
