--- a/styles/order.css
+++ b/styles/order.css
@@ -1,6 +1,7 @@
 ﻿body {
-    overflow:hidden;
+    overflow: hidden;
 }
+
 
 .display_paintings {
     line-height: 30px;
@@ -8,46 +9,49 @@
     list-style: none;
 }
 
-.display_paintings li{
-    display:inline-block;
-    
-}
+    .display_paintings li {
+        display: inline-block;
+    }
 
-.display_paintings div {
-    display:inline-block;
-    line-height:18px;
-    margin:20px;
-    vertical-align:top;
-}
+    .display_paintings div {
+        display: inline-block;
+        line-height: 18px;
+        margin: 20px;
+        vertical-align: top;
+    }
 
 /*.display_paintings div img 
 {
     width:300px;
 }*/
 
-img.lazy
-{
-    width:300px;
+.display_paintings, a {
+    text-decoration: none;
 }
 
-.display_paintings div span.painting_name 
-{
-    font-size:large;
-    font-weight:bold;
-    line-height:27px;
-    color:black;    
+
+img.lazy {
+    width: 300px;
+    margin-bottom: 20px;
+    text-decoration: none;
+    box-shadow: 20px 20px 80px gray;
 }
 
-.display_paintings div span.painting_price 
-{
-    font-size:medium;
-    font-weight:bold;
-    color:#003300;    
+.display_paintings div span.painting_name {
+    font-size: large;
+    font-weight: bold;
+    line-height: 27px;
+    color: black;
 }
 
-.display_paintings div span
-{
-    font-size:small;
-    color:gray;
-    display:block;
+.display_paintings div span.painting_price {
+    font-size: medium;
+    font-weight: bold;
+    color: #003300;
+}
+
+.display_paintings div span {
+    font-size: small;
+    color: gray;
+    display: block;
 }
